updates to CSS, and page layout

--- a/index.html
+++ b/index.html
@@ -6,69 +6,23 @@
 	<link rel="stylesheet" type="text/css" href="indexMain.css">
 </head>
 <div class="center">
-<p class="main">Alex Beckerman</p>
-Contents:
 
-<p><a href='#art'>-Art</a></p>
-<p><a href='#web'>-Prototyping/Web</a></p>
-<p><a href='#research'>-Usability Research</a></p>
 
-<p class="title">Design Experience</p>
-
-<p class="title" id="art">Art</p>
-<div class="grid"></div>
-    <div><p class="description">Photoshop of a room created as part of a computer art class. (2016)</p><img width="460" height="380" src='FINALROOMspring16 (2).png'>
-    </div>
-
-<div><p class="description">Poster created as part of a computer art class. (2018)</p><img width="330" height="510" src='PosterFinal_AlexBeckerman.png'>
+<div class="grid">
+<div><a style='color:coral' class ='main' href="index.html">Alex Beckerman</a></div>
+<div><a class ='main' href="prototyping.html">Prototyping</a></div>
+<div><a class ='main' href="design.html">Art and Usability Research</a></div>
 </div>
-<div><p class="description">Mock business card created as part of a computer art class. (2018)</p><img width="600" height="280" src='FINALBusinessCardHORIZ.jpg'>
-</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+<p>Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
+<img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
+<p><img width="65px" height="50px" src="lnLogo.png"><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
 
 
 
-<p class="title" id="web">Prototypes/Web</p>
-<div>
-    <p class="description">Figma wireframe prototype as part of a group project. (2021)</p>  
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fwrrt5mBndiMnsjabwCpzDJ%2FCS570-Prototype%3Fnode-id%3D1%253A2%26scaling%3Dcontain%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A2" allowfullscreen></iframe>
-      
-</div>
-
-    <div></div>
-    <div><p class="description">Adobe XD wireframe prototype of the social section of a fitness app. (2022)</p>  
-        <iframe width="412" height="778" src="https://xd.adobe.com/embed/9f9c3d6d-b23f-42e1-9a02-1dc53b7ea762-cacf/" frameborder="0" allowfullscreen></iframe>
-        
-    </div>
-
-
-<p class="description">Small design of a shopping website. (2022)</p>
-<iframe width="1200" height="680" src='badgerShop/index.html'></iframe>
-<p class="description">Collection of sites from a web development class. (2019) Note: color scheme is kind of weird for some of the sites.</p>    
-<iframe width="1200" height="680" src='indexweb.html'></iframe>
-
-
-
-
-
-
-<p class="title" id="research">Usability Research Experience</p>
-
-<div>
-<p>Heuristic evaluation and redesign I did for a React.js project in a UI class (2021)</p>
-<p><iframe  width="600" height="1250" src="https://docs.google.com/document/d/e/2PACX-1vT1rexh-trQwoxplloCmrkv4DfZTd2v2NKHS9zbOdtzFXNDG2etVOsJhFrszXDkapTAJ_tgkuS_WxW-/pub?embedded=true"></iframe></p>
-</div>
-
-
-<div>
-<p>Report from a short cultural probe study I conducted involving Spotify and its usability. (2021) </p>
-<p><iframe width="600" height="1250" src='Report-Beckerman.pdf'></iframe></p>
-</div>
-
-<div>
-<p>Report and diagramming process for a design ethnography study at a local student gathering area. Group created a design for UI of a digital whiteboard directory/guide. (2021)</p>
-<p><iframe width="600" height="1250" src='Report.pdf'></iframe></p>
-<p><iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="500" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FKxAI717lwGCpvO8Z1BvwEF%2FAffinity-Diagram%3Fnode-id%3D0%253A1" allowfullscreen></iframe></p>
-</div>
 
 </div>
 
