--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 
 <p>Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
 <img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
-<p><img width="65px" height="50px" src="lnLogo.png"><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
+<p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
+	<p>Education</p>
+	<p>University of Wisconsin Madison Class of 2023</p>
+	<p>Bachelors of Science: Computer Science</p>
+	<p>Bachelors of Science: Psychology</p>
+	
+	<p>Also in progress:</p>
+	<p>UW Madison Game Design Certificate</p>
+	<p>Google UX Design Professional Certificate</p>
+	
 
 
 
