--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Index</title>
+<title>Alex Beckerman</title>
 	<link rel="stylesheet" type="text/css" href="indexMain.css">
 </head>
 <div class="center">
@@ -17,7 +17,7 @@
 <p>&nbsp;</p>
 
 
-<p>Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
+<p style="font-size:30px;">Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
 <img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
 <p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
 	<p>Education</p>
