--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div><a style='color:coral' class ='main' href="index.html">Alex Beckerman</a></div>
 <div><a class ='main' href="prototyping.html">Prototyping</a></div>
 <div><a class ='main' href="design.html">Art and Usability Research</a></div>
+<div><a class='main' target="_blank" href="">Resume>
 </div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -20,7 +21,7 @@
 <p style="font-size:30px;">Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
 <img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
 <p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
-	<p>Education</p>
+	<p style="font-size:30px;">Education</p>
 	<p>University of Wisconsin Madison Class of 2023</p>
 	<p>Bachelors of Science: Computer Science</p>
 	<p>Bachelors of Science: Psychology</p>
@@ -29,6 +30,9 @@
 	<p>UW Madison Game Design Certificate</p>
 	<p>Google UX Design Professional Certificate</p>
 	
+	<p style="font-size:30px;">Work Experience<p>
+	<p>WIDA</p>
+	<p>Lavner Education</p>
 
 
 
