--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div><a style='color:coral' class ='main' href="index.html">Alex Beckerman</a></div>
 <div><a class ='main' href="prototyping.html">Prototyping</a></div>
 <div><a class ='main' href="design.html">Art and Usability Research</a></div>
-<div><a class='main' target="_blank" href="">Resume>
+<div><a class='main' target="_blank" href="Resume 2022.docx">Resume>
 </div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
