--- a/prototyping.html
+++ b/prototyping.html
@@ -10,6 +10,7 @@
         <div><a class ='main' href="index.html">Alex Beckerman</a></div>
         <div><a style='color:coral' class ='main' href="prototyping.html">Prototyping</a></div>
         <div><a class ='main' href="design.html">Art and Usability Research</a></div>
+	    <div><a class='main' target="_blank" href="Resume 2022.docx">Resume</a></div>
         </div>
 
 <p class="title" id="web">Prototypes/Web</p>
