Changed some colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <div class="grid">
-<div><a style='color:coral' class ='main' href="index.html">Alex Beckerman</a></div>
+<div><a style='color:black' class ='main' href="index.html">Alex Beckerman</a></div>
 <div><a class ='main' href="prototyping.html">Prototyping</a></div>
 <div><a class ='main' href="design.html">Art and Usability Research</a></div>
 	<div><a class='main' target="_blank" href="Resume 2022.docx">Resume</a></div>
@@ -18,7 +18,7 @@
 <p>&nbsp;</p>
 
 
-<p style="font-size:30px;">Hi, my name is Alex and I am an aspiring UI/UX Designer/Developer!</p>
+<p style="font-size:30px;">Hi, my name is Alex and I am an aspiring UI/UX Designer and Developer!</p>
 <img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
 <p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
 	<p style="font-size:30px;">Education</p>
@@ -30,9 +30,13 @@
 	<p>UW Madison Game Design Certificate</p>
 	<p>Google UX Design Professional Certificate</p>
 	
+	<p style="font-size:30px;">Skills<p>
+
 	<p style="font-size:30px;">Work Experience<p>
-	<p>WIDA</p>
-	<p>Lavner Education</p>
+	<p>WIDA: Course Development Assistant</p>
+	<p>Lavner Education: Coding Instructor</p>
+
+	<p style="font-size:30px;">Interests<p></p>
 
 
 
