--- a/index.html
+++ b/index.html
@@ -9,36 +9,41 @@
 
 
 <div class="grid">
-<div><a style='color:black' class ='main' href="index.html">Alex Beckerman</a></div>
-<div><a class ='main' href="prototyping.html">Prototyping</a></div>
-<div><a class ='main' href="design.html">Art and Usability Research</a></div>
+<div><a style='color:blue' class ='main' href="index.html">Alex Beckerman</a></div>
+<div><a class ='main' href="aboutMe.html">About Me</a></div>
+<div><a class ='main' href="projects.html">Projects</a>
+	<a href="design.html">Design/Art</a> |
+<a href="prototyping.html">Programming/Prototyping</a>
+</div>
 	<div><a class='main' target="_blank" href="Resume 2022.docx">Resume</a></div>
 </div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
 
+
+<img width="300px" height="300px" style="border-radius: 90px; border-color: #9FD6FF; border-width: 10px;" src="alex.jpg">
 <p style="font-size:30px;">Hi, my name is Alex and I am an aspiring UI/UX Designer and Developer!</p>
-<img width="300px" height="300px" style="border-radius: 15px;" src="alex.jpg">
-<p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
-	<p style="font-size:30px;">Education</p>
-	<p>University of Wisconsin Madison Class of 2023</p>
-	<p>Bachelors of Science: Computer Science</p>
-	<p>Bachelors of Science: Psychology</p>
-	
-	<p>Also in progress:</p>
-	<p>UW Madison Game Design Certificate</p>
-	<p>Google UX Design Professional Certificate</p>
-	
-	<p style="font-size:30px;">Skills<p>
 
-	<p style="font-size:30px;">Work Experience<p>
-	<p>WIDA: Course Development Assistant</p>
-	<p>Lavner Education: Coding Instructor</p>
+<div class="gridTri">
+	<div></div>
+	<div></div>
+<div ><p><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'><img width="65px" height="50px" src="lnLogo.png"></a><a class="title" href='https://www.linkedin.com/in/alex-beckerman-131a701b8/'>LinkedIn</a></p>
+</div>
+<div></div>
 
-	<p style="font-size:30px;">Interests<p></p>
-
-
+<div></div>
+<!------>
+<div></div>
+<div></div>
+<div>
+	<span class="title"><a href="aboutMe.html">About Me</a> |
+		<a href="projects.html">Projects</a>
+	</span>
+</div>
+<div></div>
+<div></div>
+</div>
 
 
 </div>
