--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
 <p class="title"> What I'm Working on Currently</p>
 <p>The design and later implementation of: an app that lets you create custom lego figures. </p>
 <img src="lego.png" width="600" height="280">
+Game Design
+As part of a class I'm currently taking, I am building small games throughout the semester. They can be found here: https://asbeckerman.itch.io
 <p class="title"> Fun Stuff that I don't consider professional, but am putting on here anyway!</p>
 <div><p class="description">Bird Wars</p><img width="280" height="600" src='birdwarsPhantomMenace.png'>
     <div><p class="description">Random Photo Edit</p><img width="600" height="280" src='edit.png'>
